--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.jboss.arquillian.extension</groupId>
         <artifactId>arquillian-jrebel-parent</artifactId>
-        <version>1.0.0.Alpha1-SNAPSHOT</version>
+        <version>1.0.0.Alpha1.ITC1</version>
     </parent>
 
     <!-- Model Version -->
@@ -14,7 +14,6 @@
 
     <!-- Artifact Configuration -->
     <artifactId>arquillian-jrebel-impl</artifactId>
-    <version>1.0.0.Alpha1-SNAPSHOT</version>
     <name>Arquillian Extension JRebel Implementation</name>
     <url>http://www.jboss.org</url>
     <description>Arquillian Extension JRebel</description>
