--- a/int-test/pom.xml
+++ b/int-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.jboss.arquillian.extension</groupId>
         <artifactId>arquillian-jrebel-parent</artifactId>
-        <version>1.0.0.Alpha1-SNAPSHOT</version>
+        <version>1.0.0.Alpha1.ITC3</version>
     </parent>
 
     <!-- Model Version -->
